# CRISPRaiCircuitsModeling

./: README.md  pyproject.toml  requirements.txt  setup.py
CRISPRaiCircuitsModeling.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
crisprai_model/: Tutorial.ipynb  crisprai_model.py  crisprai_model_test.py
crisprai_model/tests/: crisprai_model_test.py
docs/: CRISPR-based biochemical models.md  Component Specification  Component Specification.md  Functional Specification.md
src/: Example.ipynb  Tutorial.ipynb  __init__.py  crisprai_model.py  setup.py
tests/: crisprai_model_test.py
