[project]
name = "CRISPRaiCircuitsModeling"
version = "0.0.1"
authors = [
  { name="Tommy G. Primo", email="tommygprimo@gmail.com" },
]
description = "A small package for modeling CRISPRai-based genetic circuits"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/TommyGPrimo/CRISPRaiCircuitsModeling"
Issues = "https://github.com/TommyGPrimo/CRISPRaiCircuitsModeling"